--- a/assets/style/theme.css
+++ b/assets/style/theme.css
@@ -1,10 +1,12 @@
 header {
   --wrap-height: 100px;
   --icon-color: #444444;
-  --icon-size: 24px;
+  --icon-size: 26px;
 }
 #__nuxt {
   --sider-width: 15%;
+  width: 100%;
+  height: 100%;
 }
 // 声明主题色变量
 :root {
