--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -40,3 +40,26 @@ html{
   background-color: #091a28;
   color: #ebf4f1;
 }
+.heading-1 {
+  font-size: 1em;
+}
+
+.heading-2 {
+  font-size: 0.9em;
+}
+
+.heading-3 {
+  font-size: 0.8em;
+}
+
+.heading-4 {
+  font-size: 0.7em;
+}
+
+.heading-5 {
+  font-size: 0.6em;
+}
+
+.paragraph {
+  font-size: 0.8em;
+}
