--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -27,7 +27,7 @@
 .marin-r-10{
   margin-right: 20px;
 }
-html{
+html,body{
   height: 100%;
   width: 100%;
   margin: 0;
@@ -62,4 +62,8 @@ html{
 
 .paragraph {
   font-size: 0.8em;
+}
+.post-list {
+  width: 100%;
+  height: 100%;
 }
