--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -67,3 +67,12 @@ html,body{
   width: 100%;
   height: 100%;
 }
+.dark-mode{
+  .post-card {
+      border: none;
+      .dark-white {
+          color: rgba(200, 200, 200, 0.82);
+          --tag-bg:none
+        }
+    }
+}
