--- a/assets/style/theme.css
+++ b/assets/style/theme.css
@@ -18,6 +18,8 @@ header {
   --border-radius-base:10px;
   --border-radius-base-8:8px;
   --color-pink:#f3d0d7;
+  --box-shadow: 0 0px 6px rgba(0, 0, 0, 0.1);
+  --box-shadow-hover: 0 0px 10px rgba(0, 0, 0, 0.15);
 }
 /* // 声明主题色变量 */
 :root {
