--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -27,6 +27,9 @@
 .marin-r-10{
   margin-right: 20px;
 }
+.margin-b-10{
+  margin-bottom: 10px;
+}
 html,body{
   height: 100%;
   width: 100%;
@@ -75,4 +78,33 @@ html,body{
           --tag-bg:none
         }
     }
+}
+
+
+.content-part {
+  width: 100%;
+  height: 100%;
+  .content-wrapper {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+
+    .block {
+      height: 100%;
+      width: var(--sider-width);
+    }
+
+    .list-wrapper {
+      height: 100%;
+      width: calc(100% - var(--sider-width) * 2);
+      position: relative;
+    }
+  }
+}
+
+// 文本一行展示
+.text-oneline{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap
 }
