feat: scroll file synchronization

--- a/assets/style/theme.css
+++ b/assets/style/theme.css
@@ -19,6 +19,7 @@ header {
   --color-pink: #f3d0d7;
   --box-shadow: 0 0px 6px rgba(0, 0, 0, 0.1);
   --box-shadow-hover: 0 0px 10px rgba(0, 0, 0, 0.15);
+  --post-text-color: #3E5879; /* 文章内容颜色 */
 }
 /* // 声明主题色变量 */
 :root {
