--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -34,6 +34,7 @@ html,body{
   height: 100%;
   width: 100%;
   margin: 0;
+  // overflow: hidden;
 }
 .home-layout{
   height: 100%;
@@ -84,13 +85,14 @@ html,body{
 .content-part {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   .content-wrapper {
     flex: 1;
     width: 100%;
     height: 100%;
 
     .block {
-      height: 100%;
+      // height: 100%;
       width: var(--sider-width);
     }
 
