--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -1,49 +1,61 @@
 @import "./theme.css";
+
 // 隐藏滚动条
 ::-webkit-scrollbar {
   width: 6px;
 }
-.header-icon-class{
+
+.header-icon-class {
   text-decoration-thickness: 1px;
   text-underline-offset: 0.3em;
   font-size: var(--icon-size);
 }
-.hover{
+
+.hover {
   cursor: pointer;
 }
 
-.flex-row{
-    display: flex;
-    flex-direction: row;
+.flex-row {
+  display: flex;
+  flex-direction: row;
 }
-.flex-col{
-    display: flex;
-    flex-direction: column;
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
 }
-.flex-sb{
+
+.flex-sb {
   align-items: center;
   justify-content: space-between;
 }
-.marin-r-10{
+
+.marin-r-10 {
   margin-right: 20px;
 }
-.margin-b-10{
+
+.margin-b-10 {
   margin-bottom: 10px;
 }
-html,body{
+
+html,
+body {
   height: 100%;
   width: 100%;
   margin: 0;
   // overflow: hidden;
 }
-.home-layout{
+
+.home-layout {
   height: 100%;
   width: 100%;
 }
+
 .dark-mode body {
   background-color: #091a28;
   color: #ebf4f1;
 }
+
 .heading-1 {
   font-size: 1em;
 }
@@ -67,18 +79,21 @@ html,body{
 .paragraph {
   font-size: 0.8em;
 }
+
 .post-list {
   width: 100%;
   height: 100%;
 }
-.dark-mode{
+
+.dark-mode {
   .post-card {
-      border: none;
-      .dark-white {
-          color: rgba(200, 200, 200, 0.82);
-          --tag-bg:none
-        }
+    border: none;
+
+    .dark-white {
+      color: rgba(200, 200, 200, 0.82);
+      --tag-bg: none
     }
+  }
 }
 
 
@@ -86,6 +101,7 @@ html,body{
   width: 100%;
   height: 100%;
   overflow: hidden;
+
   .content-wrapper {
     flex: 1;
     width: 100%;
@@ -106,8 +122,80 @@ html,body{
 }
 
 // 文本一行展示
-.text-oneline{
+.text-oneline {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap
+}
+
+// md文档相关样式
+.post-body {
+  //标题
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: 1.2em;
+    cursor: text;
+    color: #091a28;
+  }
+
+  h1>a ,h2>a ,h3>a ,h4>a ,h5>a ,h6>a {
+    color: #091a28;
+    text-decoration: none;
+  }
+  // ol li 
+  ul,
+  ol {
+    padding-left: 2em;
+  }
+  ul {
+    list-style: disc; // 实心圆
+    li::marker {
+      color: var(--grey-dark);
+    }
+  }
+  // 引用块
+  blockquote {
+    padding: 1em;
+    margin: 0;
+    border-left: 5px solid var(--grey-dark);
+    border-radius: 0.5em;
+    font-size: 0.9em;
+    line-height: 1.5em;
+  }
+  // 行内代码
+  :not(pre >code){
+    code {
+      padding: 0.2em 0.5em;
+      margin: 0;
+      background-color: var(--post-box-bg);
+      color: #4C585B;
+      border-radius: 5px;
+      font-size: 1em;
+      line-height: 1.5em;
+    }
+  }
+
+  // 代码块
+  pre:has(> code) {
+    padding: 1.2em 1em;
+    margin: 0;
+    background-color: var(--post-box-bg);
+    border-radius: 0.5em;
+    font-size: 1em;
+    line-height: 1.5em;
+    overflow: auto;
+
+    code {
+      padding: 0;
+      margin: 0;
+      background-color: #e2e2e5;
+      border-radius: 5px;
+      font-size: 0.9em;
+      line-height: 1.5em;
+    }
+  }
 }
