--- a/assets/style/theme.css
+++ b/assets/style/theme.css
@@ -24,6 +24,7 @@ header {
 }
 /* 文章 相关CSS 变量 */
 .list-wrapper {
+  --post-title-color: #091a28;
   --post-box-radius: 0.5em;
   --post-box-padding: 1.2em 1em;
   --post-box-bg: #e2e2e5;
