--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -141,6 +141,7 @@ body {
   h6 {
     font-size: 1.2em;
     cursor: text;
+    font-weight: 600;
     color: var(--post-title-color);
   }
 
@@ -194,6 +195,7 @@ body {
       border-radius: var(--post-code-raius);
       font-size: 1em;
       line-height: 1.5em;
+      font-weight: 600;
     }
   }
 
@@ -219,26 +221,6 @@ body {
   .code-copy-added{
     position: relative;
   }
-
-  // .code-copy-added {
-  //   padding: 1.2em 1em;
-  //   margin: 15px 10px;
-  //   background-color: var(--post-box-bg);
-  //   border-radius: 0.5em;
-  //   font-size: 1em;
-  //   line-height: 1.5em;
-  //   overflow: auto;
-
-  //   code {
-  //     padding: 0;
-  //     margin: 0;
-  //     background-color: var(--post-box-bg);
-  //     border-radius: 5px;
-  //     font-size: 1em;
-  //     line-height: 1.5em;
-  //   }
-  // }
-
   .code-copy-added:hover .copy-btn {
     opacity: 1;
   }
