--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -184,11 +184,15 @@ body {
     margin-top: 2px;
   }
 
-  li ::marker{
-      content: '•'; /* 使用原点符号 */
-      color: #000; /* 设置原点的颜色 */
-      font-size: 1em; /* 设置原点的大小 */
-      margin-right: 0.5em; /* 设置原点与文本之间的间距 */
+  li ::marker {
+    content: '•';
+    /* 使用原点符号 */
+    color: #000;
+    /* 设置原点的颜色 */
+    font-size: 1em;
+    /* 设置原点的大小 */
+    margin-right: 0.5em;
+    /* 设置原点与文本之间的间距 */
   }
 
   ul {
@@ -255,4 +259,14 @@ body {
   .code-copy-added:hover .copy-btn {
     opacity: 1;
   }
+}
+
+.markdownShowTransition-enter-active,
+.markdownShowTransition-leave-active {
+  transition: opacity 0.5s ease-in;
+}
+
+.markdownShowTransition-enter-from,
+.markdownShowTransition-leave-to {
+  opacity: 0;
 }
