--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -82,6 +82,15 @@ body {
 
 .post-list {
   width: 100%;
+  height: 100%;
+  position: relative;
+  clear: both;
+
+  .post-box {
+    width: 100%;
+    overflow-y: scroll;
+    height: calc(100% - 70px);
+  }
 }
 
 
@@ -105,7 +114,6 @@ body {
       height: 100%;
       width: calc(100% - var(--sider-width) * 2);
       position: relative;
-      overflow-y: scroll;
     }
   }
 }
