fix: 文章页面滚动修复

--- a/assets/style/global.scss
+++ b/assets/style/global.scss
@@ -113,7 +113,7 @@ body {
     .list-wrapper {
       height: 100%;
       width: calc(100% - var(--sider-width) * 2);
-      position: relative;
+      overflow-y: scroll;
     }
   }
 }
